Stopped at Cross-Axis (Vertical) Alignment

--- a/style.css
+++ b/style.css
@@ -7,10 +7,24 @@
   .menu-container {
     color: #fff;
     background-color: #5995DA;  /* Blue */
-    padding: 20px 0;
+    padding: 20px 0px;
+    display: flex;
+    justify-content: center;
   }
   
   .menu {
     border: 1px solid #fff;  /* For debugging */
     width: 900px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .links {
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .login {
+    margin-left: 20px;
   }
